fix layout issue

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -120,9 +120,6 @@
 
   .cc-category{
     display  : flex;
-    max-width: 100%;
-    margin   : 0 2px;
-    position : relative;
   }
   .cc-btn {
     border-right: none;
